
2005-02-23
updated according to data_structure_im 1.5 and ehr_im 4.5
1. added attribute category to Composition, changed attribute persistent to method
2. ItemEvent extends Locatable, thus Event is subclass of Locatable now

2005-03-01
added equality check for Archetyped, FeederAudit and some tests

2005-03-04, v1.2
bug fix in DvDateTime;
removed null check for attribute details in Party

2005-03-19, v1.2.1
added support for object creation by archetype internal references

2005-03-21, v1.2.2
1. better error report during object creation
2. changes in object creation within primitive constraint

2005-03-23, v1.2.3
1. added logging support for archetype object creation
2. buf fix of assigned value causing node not optional

2005-03-30,
bug fix in DvDate.isValidDate()

2005-03-31
added base() in ArchetypeID

2005-04-29
improved support for runtime path based query on Locatable subclasses
(e.g. ItemList, Composition and Party)

2005-05-05
bug fix in DvQuantityTest related to hard coded
decimal separator

2005-05-13
improvement in createObject() of CReal and CInteger

2005-06-20
bug fix in participation constructor regarding mode and function

2005-07-11
fixed countries codeset checking in Composition

2005-07-12
interface Terminology no longer extends CodeSet, since no need to have has(CodePhrase code)

2005-07-13
add null checking for setting in the constructor of EventContext
bug fix in getParticipations of EventContext
change 'charset' and 'language' from required to optional in the constructor of DvCodedText

	+++++++++++++++ move to subversion control +++++++++++++++

2005-08-18
fixed obsolete path separator in data structure package

2005-11-17
added setters for binding items in archetype ontology package
bug fix for term binding in ADL parser

2006-03-21
bug fix in the constructor of ArchetypeOntology class

2006-08-09
upgrade to 1.0.1 

2006-11-22
Modification in DvDateTimeParserTest to make all tests pass